--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-04-phonebook",
+  "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ValentynKrasovskyi.github.io/goit-react-hw-04-phonebook/",
@@ -9,11 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "nanoid": "^4.0.2",
     "notiflix": "^3.2.6",
-    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
